--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1c75ba</color>
-    <color name="colorPrimaryDark">#146dad</color>
+    <color name="colorPrimary">#833d08</color>
+    <color name="colorPrimaryDark">#0f9d79</color>
     <color name="colorAccent">#FF4081</color>
 </resources>
